# workers

./: .gitignore  Dockerfile  LANGGRAPH_INPUT_SCHEMAS.md  LANGGRAPH_OUTPUT_SCHEMAS.md  LICENSE  README.md  default-tools.json  docker-compose.yml  env.example  langgraph.json  mcp-servers-config.json  message-decode.md  pyproject.toml  sales_config.json  test_mcp_config.py  test_tool_filtering.py  workers_dockerfile
docs/: IMPROVEMENT_PLAN.md  dependencies.md  langgraph_integration.md  project_overview.md
docs/strategies/: enhanced_planner.md
playwright/: config.json
src/agent/: __init__.py  configuration.py  graph.py  llm_factory.py  prompts.py  state.py  tools.py  vision_utils.py
src/agent/cua/: actions.py  client.py
src/deepagent_mcp/: __init__.py  agent.py  config.py  prompts.py  state.py  tools.py  utils.py
src/langgraph_mcp/: __init__.py  mcp_react_graph.py  playwright_react_graph.py  state.py  tools.py  utils.py
src/langgraph_mcp/goal_oriented/: config.py  graph.py  prompts.py
src/langgraph_mcp/planner_style/: __init__.py  config.py  graph.py  state.py
src/langgraph_mcp/supabase/: client.py  retriever.py
src/langgraph_mcp/with_planner/: config.py  graph.py
src/open_deep_research/: __init__.py  __main__.py  deep_researcher.py
src/simple_agent/: README.md  __init__.py  agent.py  config.py  graph.py  state.py
src/supabase/: retriever.py
tests/: test_planner_style_agent.py
